--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   >Главная</a
                 >
               </li>
-              <li><a href="../Tarif/Tarifu.html" class="blok__navigation__link">Тарифы</a></li>
+              <li><a href="./Tarif/Tarifu.html" class="blok__navigation__link">Тарифы</a></li>
               <li><a href="" class="blok__navigation__link">Контакты</a></li>
               <li>
                 <a href="./html(ask)/ask.html" class="blok__navigation__link">Вопросы и ответы</a>
