--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 >
               </li>
               <li><a href="./Tarif/Tarifu.html" class="blok__navigation__link">Тарифы</a></li>
-              <li><a href="" class="blok__navigation__link">Контакты</a></li>
+              <li><a href="./Cocntact/Cocntact.html" class="blok__navigation__link">Контакты</a></li>
               <li>
                 <a href="./html(ask)/ask.html" class="blok__navigation__link">Вопросы и ответы</a>
               </li>
