--- a/Tarif/Tarifu.html
+++ b/Tarif/Tarifu.html
@@ -7794,6 +7794,8 @@
             </div>
           </div>
           <!-- ? Register -->
+          <!-- ? Register -->
+
           <article class="register"></article>
         </div>
       </div>
