--- a/Cocntact/Cocntact.html
+++ b/Cocntact/Cocntact.html
@@ -140,15 +140,19 @@
             <div class="form__blok__sms__form">
               <form action="#" class="form__blok__sms__form">
                 <label for="">
+                  Ваше имя <span>*</span>
                   <input type="text" name="Ваше имя" id="" />
                 </label>
                 <label for="">
+                  Ваш e-mail  <span>*</span>
                   <input type="text" name="Ваш e-mail *" id="" />
                 </label>
                 <label for="">
+                  ID обмена: <span>*</span>
                   <input type="text" name="ID обмена:" id="" />
                 </label>
                 <label for="">
+                  Сообщение  <span>*</span>
                   <input type="text" name="Сообщение *:" id="" />
                 </label>
                 <button type="submit">Отправить сообщение</button>
@@ -183,18 +187,23 @@
           <div class="footer__blok__add">
             <div class="footer__blok__add__text">
               <a href="#"
-                ><span class="footer__blok__add__text__about">Узнать</span></a
+                ><span class="footer__blok__add__text__about">Начать обмен</span></a
               >
               <a href="#">
-                <span class="footer__blok__add__text__about">Прочитать</span></a
+                <span class="footer__blok__add__text__about">Сделки с наличными</span></a
               >
               <a href="#">
-                <span class="footer__blok__add__text__about">О сервисе</span>
+                <span class="footer__blok__add__text__about">Правила</span>
               </a>
             </div>
           </div>
           <div class="footer__blok__social">
-            <i class="fa-brands fa-telegram"></i>
+            <a
+            href="https://t.me/bissonhelp"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-telegram"></i
+          ></a>
             <span class="footer__blok__social__text"
               >ПН-ВС 10:00-22:00 по МСК</span
             >
