--- a/Tarif/Tarifu.html
+++ b/Tarif/Tarifu.html
@@ -57,8 +57,8 @@
         <div class="blok">
           <div class="blok__register">
             <div class="blok__register__log">
-              <a href="" class="blok__register__link">Войти</a>
-              <a href="" class="blok__register__link">Регистрация</a>
+              <!-- <a href="" class="blok__register__link">Войти</a>
+              <a href="" class="blok__register__link">Регистрация</a> -->
             </div>
             <div class="blok__register__email">
               <i class="fa-regular fa-envelope"></i>
@@ -7825,13 +7825,13 @@
           <div class="footer__blok__add">
             <div class="footer__blok__add__text">
               <a href="#"
-                ><span class="footer__blok__add__text__about">Узнать</span></a
+                ><span class="footer__blok__add__text__about">Начать обмен</span></a
               >
               <a href="#">
-                <span class="footer__blok__add__text__about">Прочитать</span></a
+                <span class="footer__blok__add__text__about">Сделки с наличными</span></a
               >
               <a href="#">
-                <span class="footer__blok__add__text__about">О сервисе</span>
+                <span class="footer__blok__add__text__about">Правила</span>
               </a>
             </div>
           </div>
