--- a/Dai.html
+++ b/Dai.html
@@ -54,8 +54,8 @@
         <div class="blok">
           <div class="blok__register">
             <div class="blok__register__log">
-              <a href="" class="blok__register__link">Войти</a>
-              <a href="" class="blok__register__link">Регистрация</a>
+              <!-- <a href="" class="blok__register__link">Войти</a> -->
+              <!-- <a href="" class="blok__register__link">Регистрация</a> -->
             </div>
             <div class="blok__register__email">
               <i class="fa-regular fa-envelope"></i>
@@ -105,7 +105,9 @@
               <li><a href="" class="blok__navigation__link">Тарифы</a></li>
               <li><a href="" class="blok__navigation__link">Контакты</a></li>
               <li>
-                <a href="./html(ask)/ask.html" class="blok__navigation__link">Вопросы и ответы</a>
+                <a href="./html(ask)/ask.html" class="blok__navigation__link"
+                  >Вопросы и ответы</a
+                >
               </li>
             </ul>
           </nav>
@@ -115,7 +117,6 @@
 
     <!-- ! Links -->
 
-   
     <section class="transactions">
       <div class="transactions__conteiner">
         <div class="transactions__blok">
@@ -477,7 +478,7 @@
                       <span
                         class="transactions__blok__getting__cripto__text__listing__curs__text__1"
                       >
-                      1 → 71.08
+                        1 → 71.08
                       </span>
                     </div>
                     <div
@@ -525,8 +526,8 @@
                       <span
                         class="transactions__blok__getting__cripto__text__listing__curs__text__2"
                       >
-                      1 → 71.08
-                    </span>
+                        1 → 71.08
+                      </span>
                     </div>
                     <div
                       class="transactions__blok__getting__cripto__text__listing__reserv__blok"
@@ -621,7 +622,7 @@
                       <span
                         class="transactions__blok__getting__cripto__text__listing__curs__text__4"
                       >
-                      1 → 70.9399
+                        1 → 70.9399
                       </span>
                     </div>
                     <div
@@ -1038,18 +1039,21 @@
           <div class="footer__blok__add">
             <div class="footer__blok__add__text">
               <a href="#"
-                ><span class="footer__blok__add__text__about">Узнать</span></a
+                ><span class="footer__blok__add__text__about">Начать обмен</span></a
               >
               <a href="#">
-                <span class="footer__blok__add__text__about">Прочитать</span></a
+                <span class="footer__blok__add__text__about">Сделки с наличными</span></a
               >
               <a href="#">
-                <span class="footer__blok__add__text__about">О сервисе</span>
+                <span class="footer__blok__add__text__about">Правила</span>
               </a>
             </div>
           </div>
           <div class="footer__blok__social">
-            <i class="fa-brands fa-telegram"></i>
+            <a href="https://t.me/bissonhelp" target="_blank">
+              <i class="fa-brands fa-telegram"></i>
+            </a>
+
             <span class="footer__blok__social__text"
               >ПН-ВС 10:00-22:00 по МСК</span
             >
