--- a/Nal(rub).html
+++ b/Nal(rub).html
@@ -102,8 +102,8 @@
                   >Главная</a
                 >
               </li>
-              <li><a href="" class="blok__navigation__link">Тарифы</a></li>
-              <li><a href="" class="blok__navigation__link">Контакты</a></li>
+              <!-- <li><a href="" class="blok__navigation__link">Тарифы</a></li> -->
+              <!-- <li><a href="" class="blok__navigation__link">Контакты</a></li> -->
               <li>
                 <a href="./html(ask)/ask.html" class="blok__navigation__link">Вопросы и ответы</a>
               </li>
@@ -1038,18 +1038,18 @@
           <div class="footer__blok__add">
             <div class="footer__blok__add__text">
               <a href="#"
-                ><span class="footer__blok__add__text__about">Узнать</span></a
-              >
-              <a href="#">
-                <span class="footer__blok__add__text__about">Прочитать</span></a
-              >
-              <a href="#">
-                <span class="footer__blok__add__text__about">О сервисе</span>
-              </a>
+              ><span class="footer__blok__add__text__about">Начать обмен</span></a
+            >
+            <a href="#">
+              <span class="footer__blok__add__text__about">Сделки с наличными</span></a
+            >
+            <a href="#">
+              <span class="footer__blok__add__text__about">Правила</span>
+            </a>
             </div>
           </div>
           <div class="footer__blok__social">
-            <i class="fa-brands fa-telegram"></i>
+            <a href="https://t.me/bissonhelp" target="_blank" ><i class="fa-brands fa-telegram"></i><a>
             <span class="footer__blok__social__text"
               >ПН-ВС 10:00-22:00 по МСК</span
             >
