--- a/Tetcher(trc).html
+++ b/Tetcher(trc).html
@@ -54,8 +54,8 @@
         <div class="blok">
           <div class="blok__register">
             <div class="blok__register__log">
-              <a href="" class="blok__register__link">Войти</a>
-              <a href="" class="blok__register__link">Регистрация</a>
+              <!-- <a href="" class="blok__register__link">Войти</a> -->
+              <!-- <a href="" class="blok__register__link">Регистрация</a> -->
             </div>
             <div class="blok__register__email">
               <i class="fa-regular fa-envelope"></i>
@@ -105,7 +105,9 @@
               <li><a href="" class="blok__navigation__link">Тарифы</a></li>
               <li><a href="" class="blok__navigation__link">Контакты</a></li>
               <li>
-                <a href="./html(ask)/ask.html" class="blok__navigation__link">Вопросы и ответы</a>
+                <a href="./html(ask)/ask.html" class="blok__navigation__link"
+                  >Вопросы и ответы</a
+                >
               </li>
             </ul>
           </nav>
@@ -1045,18 +1047,20 @@
           <div class="footer__blok__add">
             <div class="footer__blok__add__text">
               <a href="#"
-                ><span class="footer__blok__add__text__about">Узнать</span></a
+                ><span class="footer__blok__add__text__about">Начать обмен</span></a
               >
               <a href="#">
-                <span class="footer__blok__add__text__about">Прочитать</span></a
+                <span class="footer__blok__add__text__about">Сделки с наличными</span></a
               >
               <a href="#">
-                <span class="footer__blok__add__text__about">О сервисе</span>
+                <span class="footer__blok__add__text__about">Правила</span>
               </a>
             </div>
           </div>
           <div class="footer__blok__social">
-            <i class="fa-brands fa-telegram"></i>
+            <a href="https://t.me/bissonhelp" target="_blank">
+              <i class="fa-brands fa-telegram"></i>
+            </a>
             <span class="footer__blok__social__text"
               >ПН-ВС 10:00-22:00 по МСК</span
             >
