--- a/html(ask)/ask.html
+++ b/html(ask)/ask.html
@@ -60,8 +60,8 @@
         <div class="blok">
           <div class="blok__register">
             <div class="blok__register__log">
-              <a href="" class="blok__register__link">Войти</a>
-              <a href="" class="blok__register__link">Регистрация</a>
+              <!-- <a href="" class="blok__register__link">Войти</a>
+              <a href="" class="blok__register__link">Регистрация</a> -->
             </div>
             <div class="blok__register__email">
               <i class="fa-regular fa-envelope"></i>
@@ -104,14 +104,16 @@
             </label>
             <ul class="blok__navigation__ul">
               <li>
-                <a href="../index.html" class="blok__navigation__link--active"
+                <a href="../index.html" class="blok__navigation__link"
                   >Главная</a
                 >
               </li>
               <li><a href="" class="blok__navigation__link">Тарифы</a></li>
               <li><a href="" class="blok__navigation__link">Контакты</a></li>
               <li>
-                <a href="./html(ask)/ask.html" class="blok__navigation__link"
+                <a
+                  href="./html(ask)/ask.html"
+                  class="blok__navigation__link--active"
                   >Вопросы и ответы</a
                 >
               </li>
@@ -244,7 +246,7 @@
                 aria-expanded="true"
                 aria-controls="collapseOne"
               >
-                Что делать если не приходят письмо для подтверждения email? 
+                Что делать если не приходят письмо для подтверждения email?
               </button>
             </h2>
             <div
@@ -321,15 +323,13 @@
         </div>
       </div>
     </div>
-<!-- ! register -->
+    <!-- ! register -->
 
-<article class="register">
-  <div class="register__conteiner">
-<div class="register__blok"></div>
-
-
-  </div>
-</article>
+    <article class="register">
+      <div class="register__conteiner">
+        <div class="register__blok"></div>
+      </div>
+    </article>
 
     <!-- ! Footer -->
 
@@ -355,18 +355,27 @@
           <div class="footer__blok__add">
             <div class="footer__blok__add__text">
               <a href="#"
-                ><span class="footer__blok__add__text__about">Узнать</span></a
+                ><span class="footer__blok__add__text__about"
+                  >Начать обмен</span
+                ></a
               >
               <a href="#">
-                <span class="footer__blok__add__text__about">Прочитать</span></a
+                <span class="footer__blok__add__text__about"
+                  >Сделки с наличными</span
+                ></a
               >
               <a href="#">
-                <span class="footer__blok__add__text__about">О сервисе</span>
+                <span class="footer__blok__add__text__about">Правила </span>
               </a>
             </div>
           </div>
           <div class="footer__blok__social">
-            <i class="fa-brands fa-telegram"></i>
+            <a
+              href="https://t.me/bissonhelp"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fa-brands fa-telegram"></i
+            ></a>
             <span class="footer__blok__social__text"
               >ПН-ВС 10:00-22:00 по МСК</span
             >
