--- a/Tarif/Tarifu.html
+++ b/Tarif/Tarifu.html
@@ -112,7 +112,7 @@
                   >Тарифы</a
                 >
               </li>
-              <li><a href="" class="blok__navigation__link">Контакты</a></li>
+              <li><a href="../Cocntact/Cocntact.html" class="blok__navigation__link">Контакты</a></li>
               <li>
                 <a href="../html(ask)/ask.html" class="blok__navigation__link"
                   >Вопросы и ответы</a
