--- a/0xZRX.html
+++ b/0xZRX.html
@@ -102,7 +102,9 @@
                   >Главная</a
                 >
               </li>
-              <li><a href="" class="blok__navigation__link">Тарифы</a></li>
+              <a href="./Tarif/Tarifu.html" class="blok__navigation__link"
+                  >Тарифы</a
+                >
               <li><a href="" class="blok__navigation__link">Контакты</a></li>
               <li>
                 <a href="./html(ask)/ask.html" class="blok__navigation__link"
